updated week 8 slides

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -12,7 +12,7 @@ title: "Schedule"
 | 6 | 10/3 | Text Mining & Sentiment Analysis	 | [Slides](slides/week06.qmd) | [Lab](labs/lab6.qmd) |  |
 |   | 10/10 | NO CLASS - FALL RECESS	 |  |  | Midterm |
 | 7 | 10/17 | Scraping, APIs, and Regular Expressions	 | [Slides](slides/week07.qmd) | [Lab](labs/lab7.qmd) |  |
-| 8 | 10/24 | High Performance Computing, Cloud Computing	 | Slides | Lab | HW3 |
+| 8 | 10/24 | Efficiency and High Performance Computing | [Slides](slides/week08.qmd) | Lab | HW3 |
 | 9 | 10/31 | SQL and Managing Big Data	 | Slides | Lab |  |
 | 10 | 11/7 | Interactive Visualization & Effective Data Communication I	 | Slides | Lab | HW4 |
 | 11 | 11/14 | Interactive Visualization & Effective Data Communication II	 | Slides | Lab |  |
